--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ readme = "README.md"
 
 [dependencies]
 regex = "1"
-reqwest = { version = "0.12", features = ["blocking"] }
+reqwest = { version = "0.12", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
