--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -59,9 +59,9 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               body:
-                **Blunder!**
+                "**Blunder!**
                 Your CI made a critical mistake on the board.
                 See the battle logs here: [View Logs](${runUrl})
 
-                _Time to rethink your next move!_
+                _Time to rethink your next move!_"
             });
