--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -114,13 +114,9 @@ jobs:
           script: |
             const runUrl = `https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}`;
             
-            let summary;
-            try {
-              summary = JSON.stringify(`${{ steps.read_summary.outputs.summary }}`)
-                .slice(1, -1)
-                .substring(0, 500);
-            } catch (e) {
-              summary = "Failed to process error log";
+            let summary = "${{ steps.read_summary.outputs.summary }}";
+            if (summary.length > 500) {
+              summary = summary.substring(0, 500);
             }
 
             const commentBody = [
