--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ license = "Apache-2.0"
 readme = "README.md"
 
 [dependencies]
+axum = "0.8"
 chrono = "0.4"
 regex = "1"
 reqwest = { version = "0.12", features = ["json"] }
