--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ regex = "1"
 reqwest = { version = "0.12", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 git2 = "0.20"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
