--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ chrono = "0.4"
 regex = "1"
 reqwest = { version = "0.12", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
+tokio-util = "0.7"
 git2 = "0.20"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+once_cell = "1.18"
