--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ git2 = "0.20"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 once_cell = "1.18"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tower-http = { version = "0.5", features = ["trace"] }
