--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,6 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 shuttle-axum = "0.54.0"
 shuttle-runtime = { version = "0.54.0", default-features = false } # https://docs.shuttle.dev/docs/logs#default-tracing-subscriber
+
+[dev-dependencies]
+serial_test = "3.0.0"
