--- a/.github/workflows/shuttle_deploy.yml
+++ b/.github/workflows/shuttle_deploy.yml
@@ -11,7 +11,10 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+
       - uses: shuttle-hq/deploy-action@v2
         with:
           shuttle-api-key: ${{ secrets.SHUTTLE_API_KEY }}
           project-id: ${{ secrets.SHUTTLE_PROJECT_ID }}
+          working-directory: rook
