fix: remove ci for rook branch trigger

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,9 +2,9 @@ name: Rust
 
 on:
   push:
-    branches: [ "main", "rook" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "main", "rook" ]
+    branches: [ "main" ]
 
 permissions:
   contents: read
