--- a/rook/Cargo.toml
+++ b/rook/Cargo.toml
@@ -5,11 +5,10 @@ version = "0.1.0"
 edition = "2024"
 repository = "https://github.com/reddevilmidzy/queensac"
 license = "Apache-2.0"
-readme = "README.md"
+readme = "../README.md"
 
 [dependencies]
 axum = "0.8"
-chrono = "0.4"
 regex = "1"
 reqwest = { version = "0.12", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
@@ -20,12 +19,13 @@ serde_json = "1.0"
 once_cell = "1.18"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-shuttle-axum = "0.54.0"
-shuttle-runtime = { version = "0.54.0", default-features = false } # https://docs.shuttle.dev/docs/logs#default-tracing-subscriber
-validator = "0.14"
+shuttle-axum = "0.55.0"
+shuttle-runtime = { version = "0.55.0", default-features = false } # see https://docs.shuttle.dev/docs/logs#default-tracing-subscriber
+validator = "0.20"
 
 [dev-dependencies]
 serial_test = "3.0.0"
-fake = "~2.3"
-quickcheck = "0.9.2"
-quickcheck_macros = "0.9.1"
+fake = "4.3"
+quickcheck = "1.0.3"
+quickcheck_macros = "1.1.0"
+rand = { version = "0.9", features = ["std_rng"] }
