--- a/rook/Cargo.toml
+++ b/rook/Cargo.toml
@@ -22,6 +22,8 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 shuttle-axum = "0.55.0"
 shuttle-runtime = { version = "0.55.0", default-features = false } # see https://docs.shuttle.dev/docs/logs#default-tracing-subscriber
 validator = "0.20"
+sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
+dotenv = "0.15"
 
 [dev-dependencies]
 serial_test = "3.0.0"
