--- a/rook/Cargo.toml
+++ b/rook/Cargo.toml
@@ -27,6 +27,7 @@ sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chron
 dotenv = "0.15"
 chrono = { version = "0.4.41", features = ["serde"] }
 rand = { version = "0.9", features = ["std_rng"] }
+config = "0.13.4"
 
 [dev-dependencies]
 serial_test = "3.0.0"
