--- a/rook/Cargo.toml
+++ b/rook/Cargo.toml
@@ -19,8 +19,12 @@ serde_json = "1.0"
 once_cell = "1.18"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+# shuttle 의존성 지우기
 shuttle-axum = "0.55.0"
 shuttle-runtime = { version = "0.55.0", default-features = false } # see https://docs.shuttle.dev/docs/logs#default-tracing-subscriber
+shuttle-shared-db = { version = "0.55.0", features = ["postgres", "sqlx"] }
+
 validator = "0.20"
 secrecy = { version = "0.8", features = ["serde"] }
 sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
