--- a/rook/Cargo.toml
+++ b/rook/Cargo.toml
@@ -30,10 +30,10 @@ shuttle-shared-db = { version = "0.55.0", features = ["postgres", "sqlx"] }
 validator = "0.20"
 secrecy = { version = "0.8", features = ["serde"] }
 sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
-dotenv = "0.15"
+dotenvy = "0.15"
 chrono = { version = "0.4.41", features = ["serde"] }
 rand = { version = "0.9", features = ["std_rng"] }
-config = "0.13.4"
+config = "0.15"
 
 [dev-dependencies]
 serial_test = "3.0.0"
