--- a/rook/Cargo.toml
+++ b/rook/Cargo.toml
@@ -20,6 +20,7 @@ once_cell = "1.18"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 futures = "0.3"
+tower-http = { version = "0.6", features = ["cors"] }
 
 # shuttle 의존성 지우기
 shuttle-axum = "0.55.0"
