--- a/rook/configuration/production.yaml
+++ b/rook/configuration/production.yaml
@@ -6,3 +6,6 @@ cors:
   allowed_origins:
     - "https://queens.ac"
     - "https://www.queens.ac"
+
+repository_checker:
+  interval_seconds: 86400  # 24 hours in seconds
