--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,11 +3,11 @@
 version: 2
 updates:
   - package-ecosystem: "github-actions"
-    directory: "/"
+    directory: "/.github/workflows/"
     schedule:
       interval: "weekly"
 
   - package-ecosystem: "cargo"
-    directory: "/rook"
+    directory: "/rook/"
     schedule:
       interval: "daily"
