--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -23,12 +23,13 @@ coverage:
         if_not_found: success  # 새 코드가 없으면 성공
 
 comment:
-  layout: "header, diff, flags, files, footer"
+  layout: "header, reach, diff, flags, files, footer"
   behavior: default
   require_changes: true    # 변경사항이 있을 때만 코멘트
   require_base: false
   require_head: true
   hide_project_coverage: false  # 프로젝트 전체 커버리지 표시
+  show_carryforward_flags: true
 
 # 점진적 개선을 위한 설정
 github_checks:
