--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -175,12 +175,12 @@ jobs:
         working-directory: rook
         env:
           DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
-        run: cargo tarpaulin --out xml --output-dir coverage
+        run: cargo tarpaulin --out Lcov --output-dir coverage
       
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: rook/coverage/cobertura.xml
+          files: rook/coverage/lcov.info
           verbose: true
           fail_ci_if_error: false
