--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -146,13 +146,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      
       - name: Cache Cargo registry
         uses: actions/cache@v4
         with:
           path: |
             ~/.cargo/registry
             ~/.cargo/git
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
+          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('rook/Cargo.lock') }}
 
       - name: Cache Cargo build
         uses: actions/cache@v4
@@ -160,27 +161,32 @@ jobs:
           path: rook/target
           key: ${{ runner.os }}-cargo-build-${{ hashFiles('rook/Cargo.lock') }}
       
-      - name: Cache cargo-tarpaulin binary
-        id: cache-tarpaulin
+      - name: Cache cargo-llvm-cov binary
+        id: cache-llvm-cov
         uses: actions/cache@v4
         with:
-          path: ~/.cargo/bin/cargo-tarpaulin
-          key: ${{ runner.os }}-cargo-tarpaulin-${{ hashFiles('**/Cargo.lock') }}
+          path: ~/.cargo/bin/cargo-llvm-cov
+          key: ${{ runner.os }}-cargo-llvm-cov-${{ hashFiles('rook/Cargo.lock') }}
 
-      - name: Install cargo-tarpaulin
-        if: steps.cache-tarpaulin.outputs.cache-hit != 'true'
-        run: cargo install cargo-tarpaulin
+      - name: Install cargo-llvm-cov
+        if: steps.cache-llvm-cov.outputs.cache-hit != 'true'
+        run: cargo install cargo-llvm-cov
       
-      - name: Generate coverage report
+      - name: Generate code coverage
         working-directory: rook
         env:
           DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
-        run: cargo tarpaulin --out Lcov --output-dir coverage
-      
+        run: >
+          cargo llvm-cov
+          --all-features
+          --workspace
+          --lcov
+          --output-path lcov.info
+
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: rook/coverage/lcov.info
+          files: rook/lcov.info
           verbose: true
           fail_ci_if_error: false
