feat: change coverage reporting tool

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,7 +8,6 @@ on:
 
 permissions:
   contents: read
-  issues: write
   pull-requests: write
 
 env:
@@ -145,42 +144,35 @@ jobs:
           --health-retries 5
 
     steps:
-      - uses: actions/checkout@v4
-      - name: Cache Cargo registry
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          components: llvm-tools-preview
+
+      - name: Install cargo-llvm-cov
+        uses: taiki-e/install-action@cargo-llvm-cov
+
+      - name: Cache dependencies
         uses: actions/cache@v4
         with:
           path: |
             ~/.cargo/registry
             ~/.cargo/git
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
+            rook/target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Cache Cargo build
-        uses: actions/cache@v4
-        with:
-          path: rook/target
-          key: ${{ runner.os }}-cargo-build-${{ hashFiles('rook/Cargo.lock') }}
-      
-      - name: Cache cargo-tarpaulin binary
-        id: cache-tarpaulin
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/bin/cargo-tarpaulin
-          key: ${{ runner.os }}-cargo-tarpaulin-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Install cargo-tarpaulin
-        if: steps.cache-tarpaulin.outputs.cache-hit != 'true'
-        run: cargo install cargo-tarpaulin
-      
       - name: Generate coverage report
         working-directory: rook
         env:
           DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
-        run: cargo tarpaulin --out Lcov --output-dir coverage
-      
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v5
+        run: |
+          cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info
+
+      - name: Upload coverage to Coveralls
+        uses: coverallsapp/github-action@v2
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: rook/coverage/lcov.info
-          verbose: true
-          fail_ci_if_error: false
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: rook/lcov.info
