refactor: Move rust project to root directory from rook

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,6 @@ updates:
       interval: "weekly"
 
   - package-ecosystem: "cargo"
-    directory: "/rook/"
+    directory: "/"
     schedule:
       interval: "daily"
