--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,7 +32,7 @@ jobs:
         uses: EmbarkStudios/cargo-deny-action@v2
         with:
           log-level: warn
-          manifest-path: ./rook/Cargo.toml
+          manifest-path: ./Cargo.toml
           command: check
           arguments: --all-features
 
@@ -52,15 +52,13 @@ jobs:
       - name: Cache Cargo build
         uses: actions/cache@v4
         with:
-          path: rook/target
-          key: ${{ runner.os }}-cargo-build-${{ hashFiles('rook/Cargo.lock') }}
+          path: target
+          key: ${{ runner.os }}-cargo-build-${{ hashFiles('Cargo.lock') }}
 
       - name: Check formatting
-        working-directory: rook
         run: cargo fmt -- --check
 
       - name: Lint with Clippy
-        working-directory: rook
         run: cargo clippy -- -D warnings
 
   build:
@@ -80,11 +78,10 @@ jobs:
       - name: Cache Cargo build
         uses: actions/cache@v4
         with:
-          path: rook/target
-          key: ${{ runner.os }}-cargo-build-${{ hashFiles('rook/Cargo.lock') }}
+          path: target
+          key: ${{ runner.os }}-cargo-build-${{ hashFiles('Cargo.lock') }}
 
       - name: Build
-        working-directory: rook
         run: cargo build --verbose
 
   test:
@@ -117,11 +114,10 @@ jobs:
       - name: Cache Cargo build
         uses: actions/cache@v4
         with:
-          path: rook/target
-          key: ${{ runner.os }}-cargo-build-${{ hashFiles('rook/Cargo.lock') }}
+          path: target
+          key: ${{ runner.os }}-cargo-build-${{ hashFiles('Cargo.lock') }}
 
       - name: Run tests
-        working-directory: rook
         env:
           DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
         run: cargo test --verbose
@@ -161,11 +157,10 @@ jobs:
           path: |
             ~/.cargo/registry
             ~/.cargo/git
-            rook/target
+            target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Generate coverage report
-        working-directory: rook
         env:
           DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
         run: |
@@ -175,4 +170,4 @@ jobs:
         uses: coverallsapp/github-action@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: rook/lcov.info
+          path-to-lcov: lcov.info
