--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ dotenvy = "0.15"
 chrono = { version = "0.4.41", features = ["serde"] }
 config = "0.15"
 thiserror = "2.0"
+octocrab = "0.44"
 
 [dev-dependencies]
 serial_test = "3.0.0"
