ci: add codecov upload to coverage

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -140,3 +140,10 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path-to-lcov: lcov.info
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          files: lcov.info
+          token: ${{ secrets.CODECOV_TOKEN }}
+          flags: rust
