--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ chrono = { version = "0.4.41", features = ["serde"] }
 thiserror = "2.0"
 octocrab = "0.45.0"
 url = "2.5.6"
+clap = { version = "4", features = ["derive"] }
 
 [dev-dependencies]
 serial_test = "3.0.0"
