--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ thiserror = "2.0"
 octocrab = "0.47.0"
 url = "2.5.6"
 clap = { version = "4.5", features = ["derive"] }
+jsonwebtoken = "9"
+dotenvy = "0.15"
 
 [dev-dependencies]
 serial_test = "3.0.0"
