Update license settings in deny.toml
Changed unused-allowed-license from 'allow' to 'warn' and removed several licenses from the allow list.

--- a/deny.toml
+++ b/deny.toml
@@ -8,16 +8,13 @@ feature-depth = 1
 db-urls = ["https://github.com/rustsec/advisory-db"]
 
 [licenses]
-unused-allowed-license = "allow"
+unused-allowed-license = "warn"
 allow = [
     "Apache-2.0",
     "MIT",
-    "BSD-2-Clause",
     "BSD-3-Clause",
     "ISC",
-    "Zlib",
     "Unicode-3.0",
-    "CDLA-Permissive-2.0",
     "Unlicense",
 ]
 
