chore: Bump dependencies and narrow Tokio features
Replace tokio "full" feature with "fs" and "time". Regenerate Cargo.lock
to update many crates (wasm-bindgen, windows-*, rustls, icu,
proc-macro2, syn, etc.) and remove obsolete entries.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 [dependencies]
 regex = "1.12"
 reqwest = { version = "0.12", features = ["json", "stream"] }
-tokio = { version = "1.48", features = ["full"] }
+tokio = { version = "1.48", features = ["fs", "time"] }
 git2 = "0.20"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
