--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 [dependencies]
 regex = "1.12"
 reqwest = { version = "0.12", features = ["json"] }
-tokio = { version = "1.48", features = ["fs", "time"] }
+tokio = { version = "1.48", features = ["fs", "rt", "rt-multi-thread", "time"] }
 git2 = "0.20"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
